fix issue of title task hidden by delete

--- a/static/css/popup_form.css
+++ b/static/css/popup_form.css
@@ -49,7 +49,7 @@ label {
 .link{
   padding:1%;
 }
-#form-label{
+#task_form_label{
   margin-right:2cm;
 }
 #delete_task{
